<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_info_settings">
        <EditTextPreference
            android:key="user_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:defaultValue="@string/pref_title_user_name"
            android:title="@string/pref_title_user_name" />
        <EditTextPreference
            android:defaultValue="@string/pref_title_user_email"
            android:key="user_email"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_user_email" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/application_theme">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/theme_entries"
            android:defaultValue="system_default"
            android:key="theme"
            app:entryValues="@array/theme_values"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>